test: add test cases of get all products functionality